# revenue-sample-app

./: .gitignore  LICENSE  README.md  revenue-sample-app.cabal  sample-data.sql  stack.yaml
src/: Main.hs  Model.hs  Queries.hs  Utils.hs
src/Views/: Site.hs
static/css/: blog.css
