name:                revenue-sample-app
version:             0.1.0.0
synopsis:            Example Spock Project for f(by)
description:         Please see README.md
homepage:            http://github.com/agrafix/revenue-sample-app#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Thiemann <mail@athiemann.net>
maintainer:          Alexander Thiemann <mail@athiemann.net>
copyright:           2015 Alexander Thiemann <mail@athiemann.net>
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable revenue-app
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
                       Model
                       Views.Site
                       Utils,
                       Queries
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , blaze-bootstrap
                     , blaze-html
                     , digestive-bootstrap
                     , digestive-functors
                     , mtl
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , Spock
                     , Spock-digestive
                     , Spock-rest
                     , text
                     , time
                     , wai-middleware-static
                     , monad-logger
                     , resourcet
                     , esqueleto
                     , validate-input
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/agrafix/revenue-sample-app
